AUS-3033 Fix eyeball icon alignment

--- a/src/app/layout/modelview/components/sidebar/sidebar.component.scss
+++ b/src/app/layout/modelview/components/sidebar/sidebar.component.scss
@@ -30,6 +30,9 @@ $topnav-background-color: #222;
             .fa {
                 margin-right: 10px;
             }
+            .fa-eye {
+                vertical-align: 0%;
+            }
         }
         a:hover {
             background: darken($topnav-background-color, 5%);
